--- a/refine.ui
+++ b/refine.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>521</height>
+    <height>588</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -218,7 +218,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>400</y>
+     <y>430</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -287,31 +287,6 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>390</y>
-     <width>127</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QLabel" name="label_7">
-      <property name="text">
-       <string>ID of Player</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignHCenter|Qt::AlignTop</set>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="id"/>
-    </item>
-   </layout>
-  </widget>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
@@ -374,7 +349,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>440</y>
+     <y>460</y>
      <width>421</width>
      <height>20</height>
     </rect>
@@ -386,9 +361,9 @@
   <widget class="QPlainTextEdit" name="whereStatement">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>460</y>
-     <width>91</width>
+     <x>200</x>
+     <y>490</y>
+     <width>171</width>
      <height>51</height>
     </rect>
    </property>
@@ -396,8 +371,8 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>460</y>
+     <x>30</x>
+     <y>490</y>
      <width>131</width>
      <height>51</height>
     </rect>
@@ -409,53 +384,11 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>440</y>
-     <width>31</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>60</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>(</string>
-   </property>
-   <property name="wordWrap">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_12">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>440</y>
-     <width>31</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>60</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>)</string>
-   </property>
-   <property name="wordWrap">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="custom">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>470</y>
+     <y>550</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -481,20 +414,48 @@
     <bool>false</bool>
    </property>
   </widget>
+  <widget class="QLineEdit" name="id">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>400</y>
+     <width>171</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>400</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ID of Player</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
-  <tabstop>id</tabstop>
-  <tabstop>searchByID</tabstop>
   <tabstop>fName</tabstop>
   <tabstop>lName</tabstop>
   <tabstop>dobFrom</tabstop>
-  <tabstop>cal</tabstop>
+  <tabstop>dobTo</tabstop>
   <tabstop>mob</tabstop>
   <tabstop>email</tabstop>
-  <tabstop>female</tabstop>
+  <tabstop>id</tabstop>
+  <tabstop>whereStatement</tabstop>
+  <tabstop>male</tabstop>
   <tabstop>cancel</tabstop>
   <tabstop>clear</tabstop>
   <tabstop>search</tabstop>
+  <tabstop>searchByID</tabstop>
+  <tabstop>female</tabstop>
+  <tabstop>custom</tabstop>
+  <tabstop>cal</tabstop>
+  <tabstop>cal_2</tabstop>
  </tabstops>
  <resources/>
  <connections/>
