--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -199,6 +199,19 @@ background-image: url(:/logo.png);</string>
        </rect>
       </property>
      </widget>
+     <widget class="QPushButton" name="mockInsert">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>320</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Mock Insert</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="Competition">
      <attribute name="title">
