--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,7 +65,7 @@ background-image: url(:/logo.png);</string>
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>3</number>
     </property>
     <property name="movable">
      <bool>false</bool>
@@ -78,8 +78,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>250</y>
-        <width>113</width>
+        <y>30</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -91,8 +91,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>280</y>
-        <width>113</width>
+        <y>60</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -116,7 +116,7 @@ background-image: url(:/logo.png);</string>
        </font>
       </property>
       <property name="text">
-       <string>Player List</string>
+       <string>Players</string>
       </property>
      </widget>
      <widget class="QTableView" name="playerTable">
@@ -148,20 +148,20 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>60</y>
+        <y>320</y>
         <width>111</width>
         <height>32</height>
        </rect>
       </property>
       <property name="text">
-       <string>Refine</string>
+       <string>Search</string>
       </property>
      </widget>
      <widget class="QPushButton" name="Clear">
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>90</y>
+        <y>290</y>
         <width>111</width>
         <height>32</height>
        </rect>
@@ -203,8 +203,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>320</y>
-        <width>113</width>
+        <y>260</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -218,6 +218,136 @@ background-image: url(:/logo.png);</string>
       <string>Competition</string>
      </attribute>
     </widget>
+    <widget class="QWidget" name="Teams">
+     <attribute name="title">
+      <string>Page</string>
+     </attribute>
+     <widget class="QTableView" name="venueTable_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>771</width>
+        <height>321</height>
+       </rect>
+      </property>
+      <property name="showGrid">
+       <bool>true</bool>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::SolidLine</enum>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>100</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Teams</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>10</y>
+        <width>91</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Quick Search</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="venueRefine_2">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>320</y>
+        <width>111</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Search</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="venueClear_2">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>290</y>
+        <width>111</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="venueEdit_2">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>60</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Edit</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="quickSearch_3">
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>10</y>
+        <width>191</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="venueAdd_2">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>30</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Add </string>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="Venues">
      <attribute name="title">
       <string>Venues</string>
@@ -226,8 +356,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>320</y>
-        <width>113</width>
+        <y>260</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -249,7 +379,7 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>90</y>
+        <y>290</y>
         <width>111</width>
         <height>32</height>
        </rect>
@@ -262,8 +392,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>280</y>
-        <width>113</width>
+        <y>60</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -287,7 +417,7 @@ background-image: url(:/logo.png);</string>
        </font>
       </property>
       <property name="text">
-       <string>Venue List</string>
+       <string>Venues</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_8">
@@ -313,8 +443,8 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>250</y>
-        <width>113</width>
+        <y>30</y>
+        <width>111</width>
         <height>32</height>
        </rect>
       </property>
@@ -351,13 +481,13 @@ background-image: url(:/logo.png);</string>
       <property name="geometry">
        <rect>
         <x>780</x>
-        <y>60</y>
+        <y>320</y>
         <width>111</width>
         <height>32</height>
        </rect>
       </property>
       <property name="text">
-       <string>Refine</string>
+       <string>Search</string>
       </property>
      </widget>
     </widget>
