--- a/refine.ui
+++ b/refine.ui
@@ -140,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>280</y>
+     <y>270</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -155,7 +155,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>20</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -168,7 +168,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>10</y>
+      <y>20</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -384,7 +384,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Note: Enter you custom search query here e.g. first_name = &quot;billy&quot;</string>
+    <string>Note: Enter you custom search query here e.g. first_name = &quot;stefan&quot;</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
@@ -401,7 +401,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>8</pointsize>
+     <pointsize>13</pointsize>
     </font>
    </property>
    <property name="autoFillBackground">
