--- a/familysearchdiag.ui
+++ b/familysearchdiag.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>611</width>
-    <height>443</height>
+    <width>781</width>
+    <height>615</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,58 +17,58 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>170</y>
-     <width>581</width>
-     <height>192</height>
+     <y>80</y>
+     <width>761</width>
+     <height>481</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="lname">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>80</y>
+     <x>640</x>
+     <y>40</y>
      <width>113</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="searchLabel">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>80</y>
-     <width>71</width>
-     <height>16</height>
+     <x>540</x>
+     <y>40</y>
+     <width>91</width>
+     <height>20</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Last Name</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>490</x>
-     <y>70</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Last Name:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>410</y>
-     <width>231</width>
+     <x>510</x>
+     <y>570</y>
+     <width>254</width>
      <height>32</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="newFamily">
+      <property name="text">
+       <string>New Family</string>
+      </property>
+     </widget>
+    </item>
     <item>
      <widget class="QPushButton" name="cancel">
       <property name="text">
@@ -87,6 +87,48 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QGroupBox" name="tableGroupBox">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>10</y>
+     <width>120</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Table</string>
+   </property>
+   <widget class="QRadioButton" name="playerTableRadio">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>100</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Player Table</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="familyTableRadio">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>100</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Family Table</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
